# autolycus-desktop

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PORTING-PLAN-v2.md  PORTING-PLAN.md  README.md  architecture.html  docker-compose.yaml  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: ASTRA_LINUX_COMPAT.md  BUILD_WINDOWS.md  v0.4.0.md
docs/plans/: ADR-001-fathah-port.md  SDD-autolycus-desktop-v0.4.0-fathah-port.md  autolycus-desktop-v0.3.0-openhuman-heist.md
scripts/: install-astra.sh
src/: App.tsx  constants.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: tcp_server.py
src-tauri/src/: auth.rs  chat.rs  config.rs  config_health.rs  cronjobs.rs  discovery.rs  gateway.rs  kanban.rs  lib.rs  main.rs  mcp.rs  media.rs  memory.rs  model_discovery.rs  models.rs  profiles.rs  provider_registry.rs  registry.rs  sessions.rs  skills.rs  ssh.rs  telegram.rs  terminal.rs  validation.rs
src/components/: AgentMarkdown.tsx  ConnectScreen.tsx  ConnectionScreen.tsx  ErrorBoundary.tsx  SplashScreen.tsx  ThemeProvider.tsx  Versions.tsx  WelcomeScreen.tsx
src/components/auth/: OAuthLoginModal.tsx
src/components/chat/: ApprovalCard.tsx  ApprovalModal.tsx  ChatInput.tsx  ChatView.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  StreamingText.tsx  (+3 more)
src/hooks/: useDiscoveredModels.ts  useTranslation.ts
src/lib/: agent-client.ts  gateway-client.ts  i18n.ts  types.ts
src/stores/: connectionStore.ts  gatewayStore.ts  settingsStore.ts  uiStore.ts
src/styles/: globals.css
(+18 files in other folders)
