[package]
name = "autolycus-desktop"
version = "0.1.0"
description = "Autolycus Desktop — native desktop AI assistant"
authors = ["Autolycus Team"]
license = "MIT"
edition = "2021"

[lib]
name = "autolycus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
