[package]
name = "autolycus-desktop"
version = "0.5.0"
description = "Autolycus Desktop — native desktop AI assistant"
authors = ["Autolycus Team"]
license = "MIT"
edition = "2021"

[lib]
name = "autolycus_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
ssh2 = "0.9"
yaml-rust2 = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
